Bug 85718 - intel-gpu-tools: kms tests returning TIMEOUT
Summary: intel-gpu-tools: kms tests returning TIMEOUT
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Thomas Wood
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-31 21:12 UTC by Tiago Vignatti
Modified: 2017-05-19 09:00 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
tests/kms_flip: add a timeout for the nonblocking-read (902 bytes, patch)
2014-11-10 16:05 UTC, Thomas Wood
no flags Details | Splinter Review

Description Tiago Vignatti 2014-10-31 21:12:23 UTC
tiago@fisu:~/git/intel-gpu-tools/tests$ sudo ./kms_flip_tiling 
IGT-Version: 1.8-gab5f7ea (x86_64) (Linux: 3.13.0-39-generic x86_64)
Subtest flip-changes-tiling: TIMEOUT (5.061s)


tiago@fisu:~/git/intel-gpu-tools/tests$ sudo ./kms_flip
IGT-Version: 1.8-gab5f7ea (x86_64) (Linux: 3.13.0-39-generic x86_64)
Unable to force state on VGA-1
Using monotonic timestamps

[stays here blocked forever]


tiago@fisu:~/git/intel-gpu-tools/tests$ sudo ./kms_cursor_crc 
IGT-Version: 1.8-gab5f7ea (x86_64) (Linux: 3.13.0-39-generic x86_64)
Subtest cursor-size-change: TIMEOUT (5.069s)
Subtest cursor-64x64-onscreen: SKIP
Subtest cursor-64x64-offscreen: SKIP
Subtest cursor-64x64-sliding: SKIP
Subtest cursor-64x64-random: SKIP
Subtest cursor-64x21-onscreen: SKIP
Subtest cursor-64x21-offscreen: SKIP
Subtest cursor-64x21-sliding: SKIP
Subtest cursor-64x21-random: SKIP
Subtest cursor-128x128-onscreen: SKIP
Subtest cursor-128x128-offscreen: SKIP
Subtest cursor-128x128-sliding: SKIP
Subtest cursor-128x128-random: SKIP
Subtest cursor-128x42-onscreen: SKIP
Subtest cursor-128x42-offscreen: SKIP
Subtest cursor-128x42-sliding: SKIP
Subtest cursor-128x42-random: SKIP
Subtest cursor-256x256-onscreen: SKIP
Subtest cursor-256x256-offscreen: SKIP
Subtest cursor-256x256-sliding: SKIP
Subtest cursor-256x256-random: SKIP
Subtest cursor-256x85-onscreen: SKIP
Subtest cursor-256x85-offscreen: SKIP
Subtest cursor-256x85-sliding: SKIP
Subtest cursor-256x85-random: SKIP
Subtest cursor-512x512-onscreen: SKIP
Subtest cursor-512x512-offscreen: SKIP
Subtest cursor-512x512-sliding: SKIP
Subtest cursor-512x512-random: SKIP
Subtest cursor-512x170-onscreen: SKIP
Subtest cursor-512x170-offscreen: SKIP
Subtest cursor-512x170-sliding: SKIP
Subtest cursor-512x170-random: SKIP

tiago@fisu:~/git/intel-gpu-tools/tests$ sudo ./kms_plane 
IGT-Version: 1.8-gab5f7ea (x86_64) (Linux: 3.13.0-39-generic x86_64)
Testing connector LVDS-1 using pipe A plane 1
Subtest plane-position-covered-pipe-A-plane-1: TIMEOUT (5.045s)
Subtest plane-position-hole-pipe-A-plane-1: SKIP
Subtest plane-panning-top-left-pipe-A-plane-1: SKIP
Subtest plane-panning-bottom-right-pipe-A-plane-1: SKIP
Subtest plane-position-covered-pipe-A-plane-2: SKIP
Subtest plane-position-hole-pipe-A-plane-2: SKIP
Subtest plane-panning-top-left-pipe-A-plane-2: SKIP
Subtest plane-panning-bottom-right-pipe-A-plane-2: SKIP
Subtest plane-position-covered-pipe-A-plane-3: SKIP
Subtest plane-position-hole-pipe-A-plane-3: SKIP
Subtest plane-panning-top-left-pipe-A-plane-3: SKIP
Subtest plane-panning-bottom-right-pipe-A-plane-3: SKIP
Subtest plane-position-covered-pipe-B-plane-1: SKIP
Subtest plane-position-hole-pipe-B-plane-1: SKIP
Subtest plane-panning-top-left-pipe-B-plane-1: SKIP
Subtest plane-panning-bottom-right-pipe-B-plane-1: SKIP
Subtest plane-position-covered-pipe-B-plane-2: SKIP
Subtest plane-position-hole-pipe-B-plane-2: SKIP
Subtest plane-panning-top-left-pipe-B-plane-2: SKIP
Subtest plane-panning-bottom-right-pipe-B-plane-2: SKIP
Subtest plane-position-covered-pipe-B-plane-3: SKIP
Subtest plane-position-hole-pipe-B-plane-3: SKIP
Subtest plane-panning-top-left-pipe-B-plane-3: SKIP
Subtest plane-panning-bottom-right-pipe-B-plane-3: SKIP
Subtest plane-position-covered-pipe-C-plane-1: SKIP
Subtest plane-position-hole-pipe-C-plane-1: SKIP
Subtest plane-panning-top-left-pipe-C-plane-1: SKIP
Subtest plane-panning-bottom-right-pipe-C-plane-1: SKIP
Subtest plane-position-covered-pipe-C-plane-2: SKIP
Subtest plane-position-hole-pipe-C-plane-2: SKIP
Subtest plane-panning-top-left-pipe-C-plane-2: SKIP
Subtest plane-panning-bottom-right-pipe-C-plane-2: SKIP
Subtest plane-position-covered-pipe-C-plane-3: SKIP
Subtest plane-position-hole-pipe-C-plane-3: SKIP
Subtest plane-panning-top-left-pipe-C-plane-3: SKIP
Subtest plane-panning-bottom-right-pipe-C-plane-3: SKIP

tiago@fisu:~/git/intel-gpu-tools/tests$ sudo ./kms_mmio_vs_cs_flip 
IGT-Version: 1.8-gab5f7ea (x86_64) (Linux: 3.13.0-39-generic x86_64)
Subtest setplane_vs_cs_flip: TIMEOUT (5.137s)
Subtest setcrtc_vs_cs_flip: SKIP


dmesg information seems alright overall. Also, I've tried a few other tests like kms_render, kms_setmode and they seemed alright. Besides I'm using Ubuntu 14.04.1 LTS (Trusty Tahr) and my kernel version is 3.13.0-39-generic.

Let me know if you want some more information to diagnose this issue. Thanks.
Comment 1 Thomas Wood 2014-11-07 12:00:00 UTC
The timeout results are likely to be caused by a problem reading the pipe CRC values that are used in these tests. The skip results are due to subsequent subtests being skipped after a timeout. The CRC timeout issue is fixed in more recent kernel versions.

The kms_flip test result may be a different issue. Can you attach gdb to the process and get a backtrace to determine where the process is blocked?
Comment 2 Tiago Vignatti 2014-11-07 17:38:15 UTC
Here's where kms_flip is blocking:

https://gist.githubusercontent.com/tiagovignatti/4a0073c0cb6744429548/raw/63b8d5cd73c61369bf20425970e7b8b1192d4bec/gistfile1.txt

Besides, what kernel version (or commits?) precisely fixed that CRC timeout issue? Thanks for checking Thomas.
Comment 3 Thomas Wood 2014-11-10 16:05:28 UTC
Created attachment 109228 [details] [review]
tests/kms_flip: add a timeout for the nonblocking-read

This patch prevents kms_flip/nonblocking-read from blocking indefinitely by introducing a timeout. Please test and confirm whether it fixes the issue with kms_flip.
Comment 4 Tiago Vignatti 2014-11-10 21:14:24 UTC
(In reply to Thomas Wood from comment #3)
> This patch prevents kms_flip/nonblocking-read from blocking indefinitely by
> introducing a timeout. Please test and confirm whether it fixes the issue
> with kms_flip.

It doesn't fix my real issue, but now at least it's not blocking indefinitely:

https://gist.github.com/anonymous/21b75f7709dbec38b4a5
Comment 5 Thomas Wood 2014-11-13 14:57:58 UTC
The blocking issue in kms_flip is fixed by commit
f6aa80c (tests/kms_flip: add a timeout for the nonblocking-read test) and the issue with the subtests skipping after the a timeout is fixed by commit ebab9f0 (lib: only skip subsequent tests if a timeout occurs outside of a subtest).

The causes of both the timeout issues are fixed in more recent kernel versions.
Comment 6 Jari Tahvanainen 2017-05-19 09:00:26 UTC
Closing resolved+fixed after more than two years.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.